[fixed] fix modal size overflow issue

--- a/src/cypd.css
+++ b/src/cypd.css
@@ -413,8 +413,8 @@ body {
     position: fixed;
     top: 0;
     left: 0;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     user-select: text;
     z-index: 11;
 }
